--- a/comps/index.html
+++ b/comps/index.html
@@ -14,7 +14,7 @@ Project: design-lab
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>CIM</title>
+	<title>CCM</title>
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/ico" href="./assets/images/favicon-temp.ico" />
@@ -29,7 +29,7 @@ Project: design-lab
 <body>
 	<div id="app-container" class="container-fluid">
 		<nav id="app-nav" class="row">
-			<div id="nav-text" class="text-sm-left text-center">Child Information Manager</div>
+			<div id="nav-text" class="text-sm-left text-center">Care Center Manager</div>
 
 			<div class="col">
 				<div class="container-fluid">
