fix nav formatting

--- a/comps/index.html
+++ b/comps/index.html
@@ -27,8 +27,8 @@ Project: design-lab
 </head>
 
 <body>
-	<div id="app-container" class="container-fluid">
-		<nav id="app-nav" class="row">
+	<div id="app-container" class="container-fluid p-0">
+		<nav id="app-nav" class="row m-0">
 			<div id="nav-text" class="text-sm-left text-center">Care Center Manager</div>
 
 			<div class="col">
@@ -64,11 +64,9 @@ Project: design-lab
 		</nav>
 
 		<main id="app-content" class="container-fluid">
-
-			<div class="row">
+			<div class="row justify-content-center">
 				test
 			</div>
-
 		</main>
 	</div>
 
