update project details

--- a/comps/index.html
+++ b/comps/index.html
@@ -1,8 +1,8 @@
 <!--==================================================
 
-Date: 07-09-2019
+Date: 08-02-2019
 Author: Joseph Davis
-Project: design-lab
+Project: care-center-manager
 
 ===================================================-->
 
