make nav more responsive

--- a/comps/index.html
+++ b/comps/index.html
@@ -31,7 +31,7 @@ Project: care-center-manager
 		<nav id="app-nav" class="row m-0">
 			<div id="nav-text" class="text-sm-left text-center">Care Center Manager</div>
 
-			<div class="col">
+			<div class="col p-0">
 				<div class="container-fluid">
 					<div id="nav-paths" class="row">
 						<div class="nav-path nav-path-selected">
