--- a/comps/index.html
+++ b/comps/index.html
@@ -70,22 +70,22 @@ Project: care-center-manager
 					<div class="app-notif-content container">
 						<div class="notification row">
 							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award"><circle cx="12" cy="8" r="7"></circle><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"></polyline></svg></div>
-							<div class="notification-subject col">Joe Davis has been working here for 2 years!</div>
+							<div class="notification-subject col"><span class="notification-subject-target">Joe Davis</span> has been working here for 2 years!</div>
 						</div>
 
 						<div class="notification row">
 							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg></div>
-							<div class="notification-subject col">Steve French is turning 4 today!</div>
+							<div class="notification-subject col"><span class="notification-subject-target">Steve French</span> is turning 4 today!</div>
 						</div>
 
 						<div class="notification row">
 							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg></div>
-							<div class="notification-subject col">Charley Day has requested time off</div>
+							<div class="notification-subject col"><span class="notification-subject-target">Charley Day</span> has requested time off</div>
 						</div>
 
 						<div class="notification row">
 							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg></div>
-							<div class="notification-subject col">Bruce Green has submitted a reimbursement request</div>
+							<div class="notification-subject col"><span class="notification-subject-target">Bruce Green</span> has submitted a reimbursement request</div>
 						</div>
 					</div>
 				</div>
