--- a/comps/index.html
+++ b/comps/index.html
@@ -34,27 +34,27 @@ Project: care-center-manager
 			<div class="col p-0">
 				<div class="container-fluid">
 					<div id="nav-paths" class="row">
-						<div class="nav-path nav-path-selected">
+						<div class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'index' }" @click="UpdatePage('index')">
 							<div class="nav-path-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg></div>
 							<div class="nav-path-text">Home</div>
 						</div>
 
-						<div class="nav-path">
+						<div class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'schedule' }" @click="UpdatePage('schedule')">
 							<div class="nav-path-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg></div>
 							<div class="nav-path-text">Schedule</div>
 						</div>
 
-						<div class="nav-path">
+						<div class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'expenses' }" @click="UpdatePage('expenses')">
 							<div class="nav-path-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg></div>
 							<div class="nav-path-text">Expenses</div>
 						</div>
 
-						<div class="nav-path">
+						<div class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'employees' }" @click="UpdatePage('employees')">
 							<div class="nav-path-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg></div>
 							<div class="nav-path-text">Employees</div>
 						</div>
 
-						<div class="nav-path">
+						<div class="nav-path" v-bind:class="{ 'nav-path-selected': page === 'children' }" @click="UpdatePage('children')">
 							<div class="nav-path-icon"><?xml version="1.0" encoding="UTF-8" standalone="no"?><svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" id="svg10" version="1.1" class="feather feather-users" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24"><metadata id="metadata16"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs id="defs14" /><path style="stroke-width:1.57754219" id="path2" d="M 14.442827,19.796179 V 17.785146 A 2.4749856,4.0220668 0 0 0 11.967842,13.763079 H 7.0178713 a 2.4749856,4.0220668 0 0 0 -2.4749857,4.022067 v 2.011033" /><ellipse style="stroke-width:1.74542952" ry="3.4154208" rx="3.5679631" id="circle4" cy="7.9152541" cx="9.5593224" /><path style="stroke-width:1.65644431" id="path6" d="M 19.170861,18.382269 V 16.685137 A 3.2334636,3.3942644 0 0 0 16.745763,13.401186" /><path style="stroke-width:1.492764" id="path8" d="m 15.539941,5.2145444 a 3.1913378,2.7929907 0 0 1 0,5.4114186" /></svg></div>
 							<div class="nav-path-text">Children</div>
 						</div>
@@ -64,31 +64,53 @@ Project: care-center-manager
 		</nav>
 
 		<main id="app-content" class="container-fluid">
-			<div class="row">
-				<div id="app-notif" class="col-lg-6 col-12">
-					<div class="app-notif-title">Notifications</div>
-					<div class="app-notif-content container">
-						<div class="notification row">
-							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award"><circle cx="12" cy="8" r="7"></circle><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"></polyline></svg></div>
-							<div class="notification-subject col"><span class="notification-subject-target">Joe Davis</span> has been working here for 2 years!</div>
-						</div>
+			<div id="app-page-loading" class="container-fluid p-0" v-show="page === null">
+				<small>Loading...</small>
+			</div>
 
-						<div class="notification row">
-							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg></div>
-							<div class="notification-subject col"><span class="notification-subject-target">Steve French</span> is turning 4 today!</div>
-						</div>
-
-						<div class="notification row">
-							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg></div>
-							<div class="notification-subject col"><span class="notification-subject-target">Charley Day</span> has requested time off</div>
-						</div>
-
-						<div class="notification row">
-							<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg></div>
-							<div class="notification-subject col"><span class="notification-subject-target">Bruce Green</span> has submitted a reimbursement request</div>
+			<div id="app-page-index" class="container-fluid p-0" v-show="page === 'index'">
+				<div class="row">
+					<div id="app-notif" class="col-lg-6 col-12">
+						<div class="app-notif-title">Notifications</div>
+						<div class="app-notif-content container">
+							<div class="notification row">
+								<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award"><circle cx="12" cy="8" r="7"></circle><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"></polyline></svg></div>
+								<div class="notification-subject col"><span class="notification-subject-target">Joe Davis</span> has been working here for 2 years!</div>
+							</div>
+	
+							<div class="notification row">
+								<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-gift"><polyline points="20 12 20 22 4 22 4 12"></polyline><rect x="2" y="7" width="20" height="5"></rect><line x1="12" y1="22" x2="12" y2="7"></line><path d="M12 7H7.5a2.5 2.5 0 0 1 0-5C11 2 12 7 12 7z"></path><path d="M12 7h4.5a2.5 2.5 0 0 0 0-5C13 2 12 7 12 7z"></path></svg></div>
+								<div class="notification-subject col"><span class="notification-subject-target">Steve French</span> is turning 4 today!</div>
+							</div>
+	
+							<div class="notification row">
+								<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg></div>
+								<div class="notification-subject col"><span class="notification-subject-target">Charley Day</span> has requested time off</div>
+							</div>
+	
+							<div class="notification row">
+								<div class="notification-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg></div>
+								<div class="notification-subject col"><span class="notification-subject-target">Bruce Green</span> has submitted a reimbursement request</div>
+							</div>
 						</div>
 					</div>
 				</div>
+			</div>
+
+			<div id="app-page-schedule" class="container-fluid p-0" v-show="page === 'schedule'">
+				Schedule
+			</div>
+
+			<div id="app-page-expenses" class="container-fluid p-0" v-show="page === 'expenses'">
+				Expenses
+			</div>
+
+			<div id="app-page-employees" class="container-fluid p-0" v-show="page === 'employees'">
+				Employees
+			</div>
+
+			<div id="app-page-children" class="container-fluid p-0" v-show="page === 'children'">
+				Children
 			</div>
 		</main>
 	</div>
